ENTESB-18672: Exposes UI and Generator Hostnames
* Allows the UI and Generator Route urls to be customized by the user
  through the Custom Resource

* Addition of properties to CR requires upgrade of CRD to v1 and deprecation
  of v1alpha1

* Upgrades controller-gen dependency to include kubebuilder deprecation
  marker (see https://github.com/kubernetes-sigs/controller-tools/releases)

* Addition of route permissions to patch the routes

* go-vet.sh
 * Extends openapi-gen routine to generate for both apis
 * Adds boilerplate header for adding to generated source

--- a/apicurito/config/crd/bases/apicur.io_apicuritoes.yaml
+++ b/apicurito/config/crd/bases/apicur.io_apicuritoes.yaml
@@ -4,7 +4,7 @@ apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
   annotations:
-    controller-gen.kubebuilder.io/version: v0.4.1
+    controller-gen.kubebuilder.io/version: v0.6.1
   name: apicuritoes.apicur.io
 spec:
   group: apicur.io
@@ -15,7 +15,48 @@ spec:
     singular: apicurito
   scope: Namespaced
   versions:
-  - name: v1alpha1
+  - name: v1
+    schema:
+      openAPIV3Schema:
+        description: Apicurito is the Schema for the apicuritoes API
+        properties:
+          apiVersion:
+            description: 'APIVersion defines the versioned schema of this representation
+              of an object. Servers should convert recognized schemas to the latest
+              internal value, and may reject unrecognized values. More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#resources'
+            type: string
+          kind:
+            description: 'Kind is a string value representing the REST resource this
+              object represents. Servers may infer this from the endpoint the client
+              submits requests to. Cannot be updated. In CamelCase. More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#types-kinds'
+            type: string
+          metadata:
+            type: object
+          spec:
+            description: ApicuritoSpec defines the desired state of Apicurito
+            properties:
+              generatorRouteHostname:
+                description: The external hostname to access the generator service
+                type: string
+              size:
+                format: int32
+                type: integer
+              uiRouteHostname:
+                description: The external hostname to access the UI service
+                type: string
+            required:
+            - size
+            type: object
+          status:
+            description: ApicuritoStatus defines the observed state of Apicurito
+            type: object
+        type: object
+    served: true
+    storage: true
+    subresources:
+      status: {}
+  - deprecated: true
+    name: v1alpha1
     schema:
       openAPIV3Schema:
         description: Apicurito is the Schema for the apicuritoes API
@@ -50,7 +91,7 @@ spec:
             type: object
         type: object
     served: true
-    storage: true
+    storage: false
     subresources:
       status: {}
 status:
