--- a/apicurito/config/manifests/bases/apicurito.clusterserviceversion.yaml
+++ b/apicurito/config/manifests/bases/apicurito.clusterserviceversion.yaml
@@ -37,7 +37,7 @@ spec:
       - kind: ServiceAccount
         name: ""
         version: v1
-      version: v1alpha1
+      version: v1
   description: |+
     The API Designer is a small/minimal version of Apicurio, a standalone API design studio that can be used to create new or edit existing API designs (using the OpenAPI specification).
 
