ENTESB-18676: Replace product labels with short version
* Aligns component, operator and CSV when CVE re-spins are released.

--- a/apicurito/config/manager/Makefile
+++ b/apicurito/config/manager/Makefile
@@ -12,3 +12,4 @@ init:
 	sed -i 's/$(TAG_VAR)/$(TAG)/' $(DEPLOYMENT).$(GEN).$(YAML)
 	sed -i 's~$(IMAGE_VAR)~$(IMAGE)~' $(DEPLOYMENT).$(GEN).$(YAML)
 	sed -i 's~$(VERSION_VAR)~$(VERSION)~' $(DEPLOYMENT).$(GEN).$(YAML)
+	sed -i 's~$(SHORT_VERSION_VAR)~$(SHORT_VERSION)~' $(DEPLOYMENT).$(GEN).$(YAML)
