--- a/apicurito/config/vars/Makefile
+++ b/apicurito/config/vars/Makefile
@@ -45,6 +45,7 @@ BUNDLE_PACKAGE := --package=$(PACKAGE)
 endif
 BUNDLE_METADATA_OPTS ?= $(BUNDLE_CHANNELS) $(BUNDLE_DEFAULT_CHANNEL) $(BUNDLE_PACKAGE)
 
+SHORT_VERSION := $(shell v=$(VERSION) && echo "$${v%.*}")
 BUNDLE_DIR := bundle
 PKG := ../pkg
 CRD := crd/bases
@@ -75,3 +76,4 @@ NAMESPACE_VAR := {NAMESPACE}
 TAG_VAR := {TAG}
 IMAGE_VAR := {IMAGE}
 VERSION_VAR := {VERSION}
+SHORT_VERSION_VAR := {SHORT_VERSION}
