ENTESB-19612: Adds permission for changing the custom route

--- a/apicurito/config/rbac/cluster_role.yaml
+++ b/apicurito/config/rbac/cluster_role.yaml
@@ -20,3 +20,13 @@ rules:
   - deployments/finalizers
   verbs:
   - update
+- apiGroups:
+  - route.openshift.io
+  resources:
+  - routes/custom-host
+  verbs:
+  - get
+  - create
+  - list
+  - update
+  - delete
