--- a/apicurito/config/crd/bases/apicur.io_apicuritoes.yaml
+++ b/apicurito/config/crd/bases/apicur.io_apicuritoes.yaml
@@ -4,7 +4,7 @@ apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
   annotations:
-    controller-gen.kubebuilder.io/version: v0.6.1
+    controller-gen.kubebuilder.io/version: v0.4.1
   name: apicuritoes.apicur.io
 spec:
   group: apicur.io
@@ -55,8 +55,7 @@ spec:
     storage: true
     subresources:
       status: {}
-  - deprecated: true
-    name: v1alpha1
+  - name: v1alpha1
     schema:
       openAPIV3Schema:
         description: Apicurito is the Schema for the apicuritoes API
