docs: update sample v1 CR

--- a/apicurito/config/samples/apicur_v1_apicurito_cr.yaml
+++ b/apicurito/config/samples/apicur_v1_apicurito_cr.yaml
@@ -9,3 +9,24 @@ spec:
 #  uiRouteHostname: "apicurito-ui.example.com"
   # Customizable Generator Route Hostname - uncomment if required
 #  generatorRouteHostname: "apicurito-generator.example.com"
+  #
+  # `resourcesGenerator` field represents the resources available to each Generator pod.
+  # This field is optional, the values below are the defaults:
+  resourcesGenerator:
+    # Either `limits` or `requests` can be specified, both, or none.
+    limits:
+      cpu: "1"
+      memory: 512Mi
+    requests:
+      cpu: 500m
+      memory: 256Mi
+  # `resourcesUI` field represents the resources available to each UI pod.
+  # This field is optional, the values below are the defaults:
+  resourcesUI:
+    # Either `limits` or `requests` can be specified, both, or none.
+    limits:
+      cpu: "1"
+      memory: 128Mi
+    requests:
+      cpu: 500m
+      memory: 64Mi
